--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,21 @@ run/mesh/oval.msh
 run/mesh/oval.vtk
 run/mesh/sphere-in-sphere-1024-2140-4272-tri.msh
 run/mesh/sphere-in-sphere-1024-2972-5936-tri.msh
+run/stokes/flow-over-cyl/
+run/stokes/flow-over-ellipsoid65/
+run/stokes/flow-over-muscovite/
+run/stokes/flow-over-plus/
+run/mesh/cyl-in-sphere.geo
+run/mesh/cyl-in-sphere.msh
+run/mesh/ellipsoid65-in-sphere.geo
+run/mesh/ellipsoid65-in-sphere.msh
+run/mesh/muscovite-in-sphere.geo
+run/mesh/muscovite-in-sphere.msh
+run/mesh/muscovite.FCMacro
+run/mesh/muscovite.fcstd
+run/mesh/muscovite.step
+run/mesh/plus-in-sphere.geo
+run/mesh/plus-in-sphere.msh
+run/mesh/plus.step
+run/mesh/valj.step
+
